# workflows

./: .editorconfig  README.md  ambient.d.ts  esbuild.mjs  io.github.flying_toast.Workflows.json  meson.build  package-lock.json  package.json  tsconfig.json
.github/workflows/: check.yml
daemon/: Cargo.toml  meson.build
daemon/src/: client.rs  main.rs
daemon/src/server/: daemon.rs  dbus_service.rs  exec.rs  load.rs  mod.rs  types.rs
data/: data.gresource.xml  io.github.flying_toast.Workflows.desktop.in  io.github.flying_toast.Workflows.gschema.xml  io.github.flying_toast.Workflows.metainfo.xml.in  meson.build  style.css
data/icons/: meson.build
po/: POTFILES.in  meson.build
schemas/: meson.build
schemas/blocks/: DBusMethod.json  SetVar.json
schemas/dbus/: org.freedesktop.Application.json
schemas/triggers/: EveryNSeconds.json
src/: application.ts  io.github.flying_toast.Workflows.in  main.ts  meson.build  schema.ts  src.gresource.xml  window.blp  window.ts  workflow.ts
src/widgets/: block.blp  block.ts  block_info_dialog.blp  block_info_dialog.ts  block_selector_dialog.blp  block_selector_dialog.ts  block_selector_item.blp  block_selector_item.ts  param_row.blp  param_row.ts  selector_dialog.blp  selector_dialog.ts  selector_item.blp  selector_item.ts  sidebar.blp  sidebar.ts  workflow_list_item.blp  workflow_list_item.ts  workflow_view.blp  workflow_view.ts
