[package]
name = "workflows-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["rc"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.40", features = ["rt", "rt-multi-thread", "sync", "fs"] }
zbus = { version = "4.4", features = ["tokio"] }
